@@ -7,11 +7,15 @@ import seedu.module.ModList;
 import seedu.storage.ModStorage;
 import seedu.ui.TextUi;
 
-import java.io.*;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.BufferedReader;
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.nio.file.Files;
 
 public class NusModsParser {
@@ -19,13 +23,16 @@ public class NusModsParser {
     private static final String MODULE_API = "https://api.nusmods.com/v2/2021-2022/modules/";
 
     public static void setup(ModList modList) {
+        TextUi.printLoadStartMessage();
         if (!createModListFromSave(modList)) {
             TextUi.printLoadError();
+            return;
         }
     }
 
     private static boolean createModListFromSave(ModList modList) {
         try {
+            modList.clearMods();
             File dir = new File("data/Modules/");
             File[] directoryListing = dir.listFiles();
             if (directoryListing != null) {
@@ -36,6 +43,7 @@ public class NusModsParser {
                     modList.addMod(module);
                     // System.out.println(module.getModuleCode());
                 }
+                TextUi.printLoadSuccessMessage(modList.getSize());
             } else {
                 // Handle the case where dir is not really a directory.
                 // Checking dir.isDirectory() above would not be sufficient
@@ -49,106 +57,82 @@ public class NusModsParser {
         return true;
     }
 
-    private static ModList getModInfo(ModList modList) throws IOException, InterruptedException {
-        var client = HttpClient.newHttpClient();
-        var request = HttpRequest.newBuilder()
-                .uri(URI.create("https://api.nusmods.com/v2/2021-2022/moduleInfo.json"))
-                .header("accept", "application/json")
-                .build();
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+    public static void update(ModList modList) throws IOException, InterruptedException {
+        TextUi.printUpdateStartMessage();
+        getModList();
+        createModListFromSave(modList);
+        TextUi.printUpdateSuccessMessage();
+    }
 
+    private static void getModList() throws IOException {
+        String url = "https://api.nusmods.com/v2/2021-2022/moduleInfo.json";
+        URL obj = new URL(url);
+        HttpURLConnection con = (HttpURLConnection) obj.openConnection();
+        con.setRequestMethod("GET");
+        con.setRequestProperty("User-Agent", "Mozilla/5.0");
+
+        int count = 0;
         try {
-            InputStream inputStream = new ByteArrayInputStream(response.body().getBytes());
+            InputStream inputStream = con.getInputStream();
             JsonReader reader = new JsonReader(new InputStreamReader(inputStream));
             reader.beginArray();
-
             while (reader.hasNext()) {
                 Module module = new Gson().fromJson(reader, Module.class);
-                modList.addMod(module);
+                downloadModInfo(module);
+                System.out.println("[" + count + "] " + module.getModuleCode());
+                count++;
             }
-
             reader.endArray();
 
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return modList;
     }
 
-    private static void saveModList(ModList modList) throws IOException {
-        Gson gson = new Gson();
-        Writer writer = new FileWriter("data/Modules.json");
-        writer.write("[");
-        for (int i = 0; i < modList.getSize(); i++) {
-            if (i != 0) {
-                writer.write(",");
+    private static void downloadModInfo(Module module) {
+        String moduleCode = module.getModuleCode();
+        try {
+            String url = MODULE_API + moduleCode + ".json";
+            URL obj = new URL(url);
+            HttpURLConnection con = (HttpURLConnection) obj.openConnection();
+            con.setRequestMethod("GET");
+            con.setRequestProperty("User-Agent", "Mozilla/5.0");
+            BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
+            String inputLine;
+            StringBuffer response = new StringBuffer();
+            while ((inputLine = in.readLine()) != null) {
+                response.append(inputLine);
+                String path = "data/Modules/" + moduleCode + ".json";
+                ModStorage.createModJson(path);
+                addToFile(inputLine, path);
             }
-            gson.toJson(modList.getMod(i), writer);
-        }
-        writer.write("]");
-        writer.flush();
-        writer.close();
-    }
-
-    private static void saveIndividualMods(ModList modList) throws IOException {
-        for (int i = 0; i < modList.getSize(); i++) {
-            try {
-                saveMod(modList.getMod(i));
-            } catch (ModStorage.FileErrorException e) {
-                e.printStackTrace();
-            }
+            in.close();
+        } catch (Exception e) {
+            System.out.println("error");
         }
     }
 
-    private static void saveMod(Module module) throws IOException, ModStorage.FileErrorException {
-        Gson gson = new Gson();
-        String path = "data/Modules/" + module.getModuleCode() + ".json";
-        ModStorage.createModJson(path);
-        Writer writer = new FileWriter(path);
-        gson.toJson(module, writer);
-        writer.flush();
-        writer.close();
+    private static void addToFile(String input, String path) throws IOException {
+        FileWriter fw = new FileWriter(path, false);
+        String output = input + "\n";
+        fw.append(output);
+        fw.close();
     }
 
 
     public static Module fetchMod(String moduleCode) {
         try {
-            var client = HttpClient.newHttpClient();
-            var request = HttpRequest.newBuilder()
-                    .uri(URI.create(MODULE_API + moduleCode + ".json"))
-                    .header("accept", "application/json")
-                    .build();
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-            return new Gson().fromJson(response.body(), Module.class);
+            String url = MODULE_API + moduleCode + ".json";
+            URL obj = new URL(url);
+            HttpURLConnection con = (HttpURLConnection) obj.openConnection();
+            con.setRequestMethod("GET");
+            con.setRequestProperty("User-Agent", "Mozilla/5.0");
+            JsonReader reader = new JsonReader(new InputStreamReader(con.getInputStream()));
+            return new Gson().fromJson(reader, Module.class);
         } catch (Exception e) {
             System.out.println("error");
         }
         return null;
     }
 
-
-    private static void fetchModData(ModList modList, Module module) {
-        String modCode = module.getModuleCode();
-        module = fetchMod(modCode);
-        modList.addMod(module);
-    }
-
-    public static void update(ModList modList) throws IOException, InterruptedException {
-        TextUi.printUpdateStartMessage();
-        ModList allModsList = getModInfo(new ModList());
-        saveModList(allModsList);
-        modList.clearMods();
-        populateModList(modList, allModsList);
-        saveIndividualMods(modList);
-        TextUi.printUpdateSuccessMessage();
-    }
-
-    private static void populateModList(ModList modList, ModList allModsList) {
-        int numberOfModules = allModsList.getSize();
-
-        for (int i = 0; i < numberOfModules; i++) {
-            fetchModData(modList, allModsList.getMod(i));
-            // System.out.println(numberOfModules);
-        }
-    }
 }
